# magnus

./: .gitignore  ADD_CHAT.md  CLAUDE.md  README.md  pyproject.toml
back_end/: pyproject.toml
back_end/python_scripts/: fork_config.py  magnus_debug.py  magnus_slurm.py  migrate_database.py  pyproject.toml  share_gpu.py
back_end/python_scripts/blueprints/: magnus-debug.py  magnus-slurm.py
back_end/python_scripts/tests/: test_github_tools.py
back_end/python_scripts/tests/test_rtx5090_nvlink/: test_rtx5090_nvlink.py  test_rtx5090_nvlink.sh
back_end/python_scripts/tests/test_services/: test_llm_inference.py  test_mma_mcp.py  test_vlm_inference.py  test_z_image.py
back_end/server/: _blueprint_manager.py  _chat_manager.py  _feishu_client.py  _file_custody_manager.py  _github_client.py  _id_registry.py  _magnus_config.py  _resource_manager.py  _scheduler.py  _service_manager.py  _slurm_manager.py  database.py  main.py  models.py  routers.py  schemas.py
back_end/server/routers/: __init__.py  auth.py  blueprints.py  chat.py  cluster.py  explore.py  files.py  github.py  images.py  jobs.py  sdk.py  services.py  skills.py  users.py  ws_chat.py
configs/: magnus_config.yaml.example
docker/magnus-runtime/: Dockerfile
docker/uv-runtime/: Dockerfile
docs/: Blueprint_Crafting_Guide.md  Magnus_SDK_Guide.md  Magnus_job_runtime.md
docs/requirements/: magnus_internal_links.md
front_end/: next.config.mjs  package-lock.json  package.json  server.mjs  start-dev.mjs
front_end/src/app/: globals.css  layout.tsx  page.tsx
front_end/src/context/: language-context.tsx
front_end/src/hooks/: use-is-mobile.ts  (+1 more)
scripts/: deploy.py  setup_single_node_slurm.sh
sdks/python/: pyproject.toml
sdks/python/src/magnus/: __init__.py  actions.py  client.py  config.py  croc_tools.py  exceptions.py  file_transfer.py  http_download.py
sdks/python/src/magnus/bundled/: register.py
sdks/python/src/magnus/bundled/blueprints/: generate-ufo.py  generate-ufo.yaml  hello-world.py  hello-world.yaml  madanalysis-process.py  madanalysis-process.yaml  madgraph-compile.py  madgraph-compile.yaml  madgraph-launch.py  madgraph-launch.yaml  transfer-file.py  transfer-file.yaml  validate-feynrules.py  validate-feynrules.yaml
sdks/python/src/magnus/bundled/skills/feynrules-model-generator/: meta.yaml
sdks/python/src/magnus/bundled/skills/feynrules-validator/: meta.yaml
sdks/python/src/magnus/bundled/skills/madanalysis-analyzer/: meta.yaml
sdks/python/src/magnus/bundled/skills/madgraph-simulator/: meta.yaml
sdks/python/src/magnus/bundled/skills/magnus/: meta.yaml
sdks/python/src/magnus/bundled/skills/ufo-generator/: meta.yaml
sdks/python/src/magnus/cli/: commands.py
(+78 files in other folders)
