[project]
name = "magnus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools>=5.0.0",
    "fastapi>=0.124.0",
    "fastmcp>=2.14.2",
    "httpx[socks]>=0.28.1",
    "magnus-sdk>=0.7.0",
    "openai>=1.0.0",
    "pyjwt>=2.10.1",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
    "pywheels==0.8.3.2",
    "ruamel-yaml>=0.18.16",
    "sqlalchemy>=2.0.44",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "python_scripts",
]
