[project]
name = "magnus-sdk"
version = "0.1.0"
description = "Official Python SDK and CLI for Magnus"
requires-python = ">=3.10"
authors = [
    { name = "Magnus Team, Rise-AGI", email = "sun_retailer@163.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pywheels>=0.8.3.2",
]

[project.scripts]
magnus = "magnus.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magnus"]
