[project]
name = "magnus-sdk"
version = "0.7.6"
description = "Official Python SDK and CLI for Magnus"
requires-python = ">=3.10"
authors = [
    { name = "Magnus Team, PKU Plasma Lab × Rise-AGI", email = "sun_retailer@163.com" }
]
dependencies = [
    "httpx[socks]>=0.27.0",
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "ruamel.yaml>=0.18.0",
]

[project.scripts]
magnus = "magnus.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/magnus"]
